<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:background="@color/colorWhite"
    android:layout_marginTop="16dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_gravity="center_vertical"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/price"
            android:background="@drawable/money_background_black"
            android:layout_alignParentLeft="true"
            android:layout_width="wrap_content"
            android:text="@string/price"
            android:textStyle="bold"
            android:textSize="20sp"
            android:padding="8dp"
            android:textColor="@color/colorBlack"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true" />
        <TextView
            android:textColor="@color/colorBlack"
            android:text="@string/address"
            android:layout_toLeftOf="@id/info"
            android:id="@+id/addres"
            android:layout_marginLeft="8dp"
            android:layout_toRightOf="@id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@id/price"
            android:layout_toStartOf="@id/info" />
        <TextView
            android:layout_toLeftOf="@id/info"
            android:textColor="@color/colorBlack"
            android:layout_below="@id/addres"
            android:id="@+id/title"
            android:text="@string/title"
            android:layout_marginLeft="8dp"
            android:layout_toRightOf="@id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@id/price" />
        <ImageView
            android:visibility="invisible"
            android:id="@+id/accept_order"
            android:layout_marginRight="8dp"
            android:layout_centerVertical="true"
            android:src = "@drawable/ic_check"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="8dp" />
        <View
            android:layout_marginTop="8dp"
            android:layout_below="@id/price"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorGrey"/>
    </RelativeLayout>

</LinearLayout>